@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter-rare v23.11.29-cur, done by sprscc13@mr.n0b0dy.
--;-;-;2023-11-29 20:46:55, took 00:11:36, with 80 workers, on 3386 cases, 0 failed, 0 traces, 10 retries
+-;-;-;2023-11-29 21:27:54, took 00:11:45, with 80 workers, on 3392 cases, 0 failed, 0 traces, 7 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
@@ -38,6 +38,8 @@ http://sources.freertr.org/cfg/conn-bridge15.tst;conn-bridge15.tst;success;bridg
 http://sources.freertr.org/cfg/conn-bridge16.tst;conn-bridge16.tst;success;bridge static address
 http://sources.freertr.org/cfg/conn-bridge17.tst;conn-bridge17.tst;success;bridge port split horizon
 http://sources.freertr.org/cfg/conn-bridge18.tst;conn-bridge18.tst;success;bridge port unsplit horizon
+http://sources.freertr.org/cfg/conn-bridge19.tst;conn-bridge19.tst;success;bridged ethernet over tmux
+http://sources.freertr.org/cfg/conn-bridge20.tst;conn-bridge20.tst;success;bridged ethernet over l2tp3
 http://sources.freertr.org/cfg/conn-bstun.tst;conn-bstun.tst;success;ppp over bstun
 http://sources.freertr.org/cfg/conn-bundle01.tst;conn-bundle01.tst;success;bundle of ethernet port
 http://sources.freertr.org/cfg/conn-bundle02.tst;conn-bundle02.tst;success;bundle of serial port
@@ -731,6 +733,8 @@ http://sources.freertr.org/cfg/crypt-macsec50.tst;crypt-macsec50.tst;success;mac
 http://sources.freertr.org/cfg/crypt-macsec51.tst;crypt-macsec51.tst;success;macsec with aes128gcm and aead
 http://sources.freertr.org/cfg/crypt-macsec52.tst;crypt-macsec52.tst;success;macsec with aes192gcm and aead
 http://sources.freertr.org/cfg/crypt-macsec53.tst;crypt-macsec53.tst;success;macsec with aes256gcm and aead
+http://sources.freertr.org/cfg/crypt-macsec54.tst;crypt-macsec54.tst;success;macsec over tmux
+http://sources.freertr.org/cfg/crypt-macsec55.tst;crypt-macsec55.tst;success;macsec over l2tp3
 http://sources.freertr.org/cfg/crypt-nat01.tst;crypt-nat01.tst;success;source list translation to interface
 http://sources.freertr.org/cfg/crypt-nat02.tst;crypt-nat02.tst;success;source list translation to address
 http://sources.freertr.org/cfg/crypt-nat03.tst;crypt-nat03.tst;success;source address translation to interface
@@ -828,6 +832,8 @@ http://sources.freertr.org/cfg/crypt-sgt20.tst;crypt-sgt20.tst;success;sgt encap
 http://sources.freertr.org/cfg/crypt-sgt21.tst;crypt-sgt21.tst;success;sgt encapsulation with egress allow
 http://sources.freertr.org/cfg/crypt-sgt22.tst;crypt-sgt22.tst;success;sgt encapsulation with ingress forbid
 http://sources.freertr.org/cfg/crypt-sgt23.tst;crypt-sgt23.tst;success;sgt encapsulation with egress forbid
+http://sources.freertr.org/cfg/crypt-sgt24.tst;crypt-sgt24.tst;success;sgt tmux encapsulation
+http://sources.freertr.org/cfg/crypt-sgt25.tst;crypt-sgt25.tst;success;sgt l2tp3 encapsulation
 http://sources.freertr.org/cfg/crypt-skip01.tst;crypt-skip01.tst;success;skip over ipv4
 http://sources.freertr.org/cfg/crypt-skip02.tst;crypt-skip02.tst;success;skip over ipv6
 http://sources.freertr.org/cfg/crypt-skip03.tst;crypt-skip03.tst;success;skip over skip
