@@ -34,6 +34,8 @@ qc pass: bridge port security
 qc pass: bridge static address
 qc pass: bridge port split horizon
 qc pass: bridge port unsplit horizon
+qc pass: bridged ethernet over tmux
+qc pass: bridged ethernet over l2tp3
 qc pass: ppp over bstun
 qc pass: bundle of ethernet port
 qc pass: bundle of serial port
@@ -727,6 +729,8 @@ qc pass: macsec with aes256gcm and hash
 qc pass: macsec with aes128gcm and aead
 qc pass: macsec with aes192gcm and aead
 qc pass: macsec with aes256gcm and aead
+qc pass: macsec over tmux
+qc pass: macsec over l2tp3
 qc pass: source list translation to interface
 qc pass: source list translation to address
 qc pass: source address translation to interface
@@ -824,6 +828,8 @@ qc pass: sgt encapsulation with ingress allow
 qc pass: sgt encapsulation with egress allow
 qc pass: sgt encapsulation with ingress forbid
 qc pass: sgt encapsulation with egress forbid
+qc pass: sgt tmux encapsulation
+qc pass: sgt l2tp3 encapsulation
 qc pass: skip over ipv4
 qc pass: skip over ipv6
 qc pass: skip over skip
