@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter-rare v23.11.29-cur, done by sprscc13@mr.n0b0dy.
--;-;-;2023-11-29 20:56:13, took 00:09:01, with 60 workers, on 526 cases, 0 failed, 0 traces, 1 retries
+-;-;-;2023-11-29 21:38:45, took 00:10:35, with 60 workers, on 526 cases, 0 failed, 0 traces, 0 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
