@@ -15,7 +15,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter-rare v23.11.29-cur, done by sprscc13@mr.n0b0dy.<br/>
-tested: 2023-11-29 20:56:13, took 00:09:01, with 60 workers, on 526 cases, 0 failed, 0 traces, 1 retries<br/>
+tested: 2023-11-29 21:38:45, took 00:10:35, with 60 workers, on 526 cases, 0 failed, 0 traces, 0 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
